# 3D-MNIST-PyTorch-Lightning

./: .gitignore  LICENSE  README.md  example.config.ini  main.py  pyproject.toml
mnist_3d_pytorch_lightning/: __init__.py  data_module.py  model.py
workflows/: linting.yml
