[tool.poetry]
name = "3d-mnist-pytorch-lighting"
version = "0.1.0"
description = ""
authors = ["Michael Tinsley <michaeltinsley@outlook.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pytorch-lightning = "^1.2.6"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
mypy = "^0.812"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py37']

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88

[tool.pylint.messages_control]
disable = "C0330, C0326"

[tool.pylint.format]
max-line-length = "88"
